# MADA

./: CMakeLists.txt  README.md  package.xml
include/mada/: dynamic_areas.hpp  environment_exploration.hpp  exploration_functions.hpp  mada_master.hpp  mada_publisher.hpp  mada_robots_listener.hpp  mada_util.h  navigation_functions.hpp  path_follower.hpp  projPoints.h
include/mada/util/: bresenham.hpp  cbdb_planner.hpp  cluster.hpp  fmm_2.hpp  funciones.hpp  generic_fmm.hpp  geometry.hpp  graph_functions.hpp  path.hpp  sfmm_planner.hpp  tr_fmm.hpp  useless.hpp
launch/: loc_amcl.xml  loc_odom.xml  scen10.launch  scen7.launch  sim_conf.sh  start_simulation.sh
mb_config/: _costmap_common_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  slam_gmapping.xml
rviz/scen10/: planner.rviz  soc_fmm_planner_dwa.rviz  soco_fmm_planner_dwa.rviz
rviz/scen10/greedy/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen10/greedy/pf/: low_level_planning.rviz
rviz/scen10/mada/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen10/madp/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen10/madp/pf/: high_level_planning.rviz
rviz/scen7/: low_level_planning.rviz  planner.rviz
rviz/scen7/greedy/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen7/mada/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen7/madp/dwa/: high_level_planning.rviz  low_level_planning.rviz
rviz/scen7/madp/pf/: high_level_planning.rviz
src/: greedy_dwa.cpp  greedy_pf.cpp  mada_dwa.cpp  mada_master_node.cpp  mada_pf.cpp  mada_proj_pf.cpp  mada_util.cpp  madp_dwa.cpp  madp_pf.cpp  obstacles.cpp  path_follower.cpp  path_follower_ex.cpp  projPoints.cpp
src/util/: basic_hungarian.cpp  bresenham.cpp  cluster.cpp  dynamic.cpp  eq_segm.cpp  fmm_2.cpp  funciones.cpp  generic_fmm.cpp  geometry.cpp  grad_segm_def.cpp  hungarian.cpp  it_grad_segm.cpp  nearest_neighbor.cpp  useless.cpp
world/: scen10.world  scen10.yaml  scen10_dense.world  scen10_empty.world  scen10_low.world  scen10_nondense.world  scen7.world  scen7.yaml  scen7_dense.world  scen7_low.world
